--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9",
     "@types/bun": "^1.1.12",
     "@types/node": "^20.16.15",
     "@types/react": "^18.3.12",
