--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "email-dev": "NODE_NO_WARNINGS=1 email dev"
+    "email-dev": "NODE_NO_WARNINGS=1 email dev",
+    "pcnar": "npm cache clear --force; rm -rf node_modules; bun install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -18,7 +20,7 @@
     "@react-email/components": "^0.0.25",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
@@ -26,6 +28,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
     "resend": "^4.0.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
